--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
+@source "../../node_modules/@daveyplate/better-auth-ui";
+
 @import "tailwindcss";
 @import "tw-animate-css";
+
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
